Implementación de servicio de consultar filtro por código, se crea servicio de buscar empresa por id de usuario